Update Eco_illum.html added missing <p>

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -150,7 +150,11 @@
     <!-- 3. Lanterns & Eco-Art Approach -->
   <section>
       <h2>🦋 Lanterns & Eco-Art Approach</h2>
-        The lanterns are <strong>semi-hard sculptures</strong> and stage characters; their shadows perform alongside the artist. Eco-materials adapt to West Coast wet weather: rosemary branches, later reinforced with wire, and lavender stems adorn daytime sculptures. Lanterns, props, and the Sumi-e curtain all participate in <strong>interactive improvisation</strong>—no rehearsal, experiments with light, position, and shadow gesture determine the performance path.</p>
+      <p> The lanterns are <strong>semi-hard sculptures</strong> and stage characters;
+        their shadows perform alongside the artist. Eco-materials adapt to West Coast wet weather: 
+        rosemary branches, later reinforced with wire, and lavender stems adorn daytime sculptures. 
+        Lanterns, props, and the Sumi-e curtain all participate in <strong>interactive improvisation</strong>
+        —no rehearsal, experiments with light, position, and shadow gesture determine the performance path.</p>
       <p>This approach prioritizes sustainability, accessibility, and ecological imagination—turning found, upcycled, or natural materials into poetic visual and performative objects.</p>
       <p>This practice evolved in 2026 with the <strong>Teapot Lantern</strong> series, first showcased in the <em>Plasticity</em> exhibition at Habit Coffee.
       </p>
@@ -519,6 +523,7 @@
 
 </body>
 </html>
+
 
 
 
