--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <a href="#home" class="logo">
         <img src="rss/WenAn_Annreflection_logo-icon_clear_bg.png" height="60" alt="Ann Chou logo" />
       </a>
-      <a class="active" href="#home">Home 🏠</a>
+      <a class="active" href="#home" class="active">Home 🏠</a>
       <a href="Practices.html">Practices 🧬</a>
       <a href="Eco_illum.html" class="eco-link">Eco-Illum 🌘</a>
       <a href="workshops.html">Workshops 🎨</a>
@@ -562,6 +562,7 @@
 </body>
 
 </html>
+
 
 
 
