--- a/Practices.html
+++ b/Practices.html
@@ -45,7 +45,7 @@
         <img src="rss/WenAn_Annreflection_logo-icon_clear_bg.png" height="60" alt="Ann Chou logo" />
       </a>
       <a href="index.html">Home 🏠</a>
-      <a href="Practices.html">Practices 🧬</a>
+      <a href="Practices.html" class="active">Practices 🧬</a>
       <a href="Eco_illum.html">Eco-Illum 🌘</a>
       <a href="workshops.html">Workshops 🎨</a>
 
@@ -406,6 +406,7 @@
 
 </body>
 </html>
+
 
 
 
