--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             🧬 View Project on GitHub
           </a>
         
-          <figure>
+          <figure class="figure-block">
             <img src="rss/AF_discovery_AI4Good.jpg" alt="Diagram of the AF Discovery model showing fetal head segmentation and circumference estimation via ultrasound." />
             <figcaption>Segmentation and regression pipeline for fetal biometrics in maternal care.</figcaption>
           </figure>
@@ -562,6 +562,7 @@
 </body>
 
 </html>
+
 
 
 
