Update index.html fix format set the stage

--- a/index.html
+++ b/index.html
@@ -319,7 +319,12 @@
 <section id="digital-fdn-care-interface">
   <h2>🧱 Digital Foundations of Care Interfaces</h2>
   <div class="project-banner-note">
-    🧩 These foundational experiments in data visualization and playful design set the stage for my <em>Draw-Aloud</em> protocol—where health stories became visual, relational, and co-authored. From dispatch maps to sumi-e gestures, each project explores how people interact with care through code, form, and feeling.
+    <p><
+    🧩 These foundational experiments in data visualization and playful design set the stage for my 
+         <em>Draw-Aloud</em> protocol—where health stories became visual, relational, and co-authored.
+      From dispatch maps to sumi-e gestures, each project explores how people interact with care through code, 
+      form, and feeling.
+    </p>
   </div>
 
   <div class="project-grid clearfix">
@@ -562,6 +567,7 @@
 </body>
 
 </html>
+
 
 
 
