Update index.html remove clearfix class from html

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <section id="featured-projects">
       <h2>Key Artistic Projects</h2>
-      <div class="project-grid clearfix">
+      <div class="project-grid">
         <div class="project project-card">
           <h3>Lantern Installation Series</h3>
           <p>Interactive light-based installations exploring resilience, accessibility, and community connection.</p>
@@ -327,7 +327,7 @@
     </p>
   </div>
 
-  <div class="project-grid clearfix">
+  <div class="project-grid">
 
     <!-- HT Project Panel -->
     <div class="project project-card">
@@ -392,7 +392,7 @@
      
     <section id="ai-portfolio">
       <h2>AI & Service Design Portfolio</h2>
-      <div class="project-grid clearfix">
+      <div class="project-grid">
         <div class="project">
           <h3>
             AF Discovery <span style="font-weight:normal;">(AI4Good Internship Project – 2023)</span>
@@ -568,6 +568,7 @@
 </body>
 
 </html>
+
 
 
 
