Update index.html - single-column grid

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
      
     <section id="ai-portfolio">
       <h2>AI & Service Design Portfolio</h2>
-      <div class="project-grid">
+      <div class="single-col-grid">
         <div class="project">
           <h3>
             AF Discovery <span style="font-weight:normal;">(AI4Good Internship Project – 2023)</span>
@@ -568,6 +568,7 @@
 </body>
 
 </html>
+
 
 
 
