Update index.html. enable dark

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
   <script src="scripts/main.js"></script>
   <script src="scripts/social-widgets.js"></script>
 
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      // This overrides the system default just for this page
+      initApp('enabled'); 
+    });
+  </script>
+  <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
   
 </head>
 
@@ -568,6 +575,7 @@
 </body>
 
 </html>
+
 
 
 
