Update index.html remove <sscript> from index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ann K. Chou – Multi-sensory Artist, Access Designer, Artist-Scientist</title>
-  <meta name="description" content="Ann K. Chou is an oral d/Deaf, Hong Kong–born artist and access designer who creates inclusive installations, sensory lanterns, and participatory workshops across Vancouver and Victoria." />
+  <meta name="description" content="Ann K. Chou is a neurodiverse oral d/Deaf, Hong Kong–born artist and access designer who creates inclusive installations, sensory lanterns, and participatory workshops across Vancouver and Victoria." />
   <meta name="keywords" content="Ann Chou, artist, lantern maker, accessibility, Deaf artist, inclusive design, community art, Victoria BC, Vancouver BC, sensory art, sumi-e, light installation" />
   <meta name="author" content="Ann K. Chou" />
   <meta property="og:title" content="Ann K. Chou – Artist & Accessibility Advocate" />
@@ -19,13 +19,6 @@
  <!-- <link rel="stylesheet" href="css/master.css" /> -->
   <script src="scripts/main.js"></script>
   <script src="scripts/social-widgets.js"></script>
-
-  <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      // This overrides the system default just for this page
-      initApp('enabled'); 
-    });
-  </script>
   <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
   
 </head>
@@ -575,6 +568,7 @@
 </body>
 
 </html>
+
 
 
 
