--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a href="Practices.html">Practices 🧬</a>
       <a href="Eco_illum.html" class="eco-link">Eco-Illum 🌘</a>
       <a href="workshops.html">Workshops 🎨</a>
-      <!-- temp shop -->
+      <!-- temp shop --> <!--
       <div class="dropdown">
         <a href="#" class="dropbtn">Shop 👜</a>
         <div class="dropdown-content">
@@ -52,7 +52,7 @@
           <a href="https://annreflectionarts.square.site/shop/suprise-packs/25">Surprise Packs ($5)</a>
           <a href="https://register.inclusionartshow.com/product-category/ann-k-chou/">Inclusion Art Show</a>
         </div>
-      </div>
+      </div> -->
 
 
       <!-- 🌙 Dark mode toggle button problem
@@ -65,10 +65,11 @@
         </button>
       </div>  -->
 
-    <!-- Dark mode toggle button -->
+    <!-- Dark mode + assistive toggle button -->
     <button id="darkModeToggle" class="button-ghost" onclick="toggleDarkMode()">🌙</button>
+    <button id="assistiveBtnTop" class="button-ghost">🖍️</button>
       <!-- Hamburger icon -->
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+     <a href="javascript:void(0);" class="icon" > //onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
     </div>
@@ -568,6 +569,7 @@
 </body>
 
 </html>
+
 
 
 
