Update index.html placeholder for recent news and update

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
       </div>  -->
 
     <!-- Dark mode + assistive toggle button -->
-    <button id="darkModeToggle" class="button-ghost" onclick="toggleDarkMode()">🌙</button>
+    <button id="darkModeToggle" class="button-ghost">🌙</button>
     <button id="assistiveBtnTop" class="button-ghost">🖍️</button>
       <!-- Hamburger icon -->
-     <a href="javascript:void(0);" class="icon" > //onclick="myFunction()">
+     <a href="javascript:void(0);" class="icon" > 
         <i class="fa fa-bars"></i>
-      </a>
+    </a>
     </div>
   </header>
 
@@ -135,6 +135,20 @@
         </p>
     </section>
 
+    <section id="news-updates">
+      <div class="project-banner-note">
+        <h3>✨ Recent News & Upcoming</h3>
+        <p>
+          <strong>Teapot Lanterns: Brewing Light & Connection</strong><br>
+          Join me for a free teapot lantern-making workshop at NeighbourSpace.
+        </p>
+        <ul>
+          <li><strong>When:</strong> Friday, Feb 13, 2026 (Time TBD)</li>
+          <li><strong>Note:</strong> Dates may shift to March if needed.</li>
+        </ul>
+        <a href="https://annreflection.substack.com/" class="button-ghost glow-green">Follow for Workshop Updates →</a>
+      </div>
+    </section>
     <section id="featured-projects">
       <h2>Key Artistic Projects</h2>
       <div class="project-grid">
@@ -569,6 +583,7 @@
 </body>
 
 </html>
+
 
 
 
