Update Eco_illum.html hide hamburger

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -53,10 +53,10 @@
     <!-- Dark mode toggle button -->
     <button id="darkModeToggle" class="button-ghost" onclick="toggleDarkMode()">🌙</button>
   
-    <!-- Hamburger icon -->
+    <!-- Hamburger icon --> <!--
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
-    </a>
+    </a> -->
   </div>
 
   </header>
@@ -523,6 +523,7 @@
 
 </body>
 </html>
+
 
 
 
