Update workshops.html remove inline format

--- a/workshops.html
+++ b/workshops.html
@@ -23,7 +23,7 @@
 <header>
   <div class="topnav" id="myTopnav">
     <a href="index.html" class="logo">
-      <img src="rss/AnnReflectionBannerforLetter_clear.png" height="60" alt="Annreflection Studio logo">
+      <img src="rss/WenAn_Annreflection_logo-icon_clear_bg.png" height="60" alt="Annreflection Studio logo">
     </a>
     <a href="index.html">Home 🏠</a>
     <a href="Practices.html">Practices 🧬</a>
@@ -40,7 +40,7 @@
         </div>
       </div>
     <button id="darkModeToggle" class="button-ghost" onclick="toggleDarkMode()">🌙</button>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <a href="javascript:void(0);" class="icon" onclick="initializeResponsiveNav()">
       <i class="fa fa-bars"></i>
     </a>
   </div>
@@ -60,11 +60,11 @@
 </div>
 
 <!-- ✅ HERO SECTION -->
-<section class="hero" style="background: linear-gradient(rgba(245,242,237,0.9), rgba(245,242,237,0.95)), url('images/hero-artjam.jpg') center/cover no-repeat; padding: 5rem 2rem; text-align: center;">
-  <div class="hero-content" style="max-width: 800px; margin: auto;">
+<section class="hero-banner">
+ <div class="hero-content">
     <h1 style="font-size: 2.8rem; margin-bottom: 1rem; font-family: 'Georgia', serif;">Annreflection Studio</h1>
     <p style="font-size: 1.2rem; line-height: 1.6;">A creative practice offering inclusive workshops, lantern installations, and community-based artmaking rooted in light, reflection, and interdependence.</p>
-    <a href="#contact" class="button glow-ink" style="margin-top: 1.5rem; display: inline-block;">Book a Workshop</a>
+    <a href="#contact" class="button glow-ink">Book a Workshop</a>
   </div>
 </section>
 
