--- a/workshops.html
+++ b/workshops.html
@@ -5,6 +5,7 @@
   <title>Workshops & Community Arts – Annreflection Studio</title>
   <meta name="description" content="Accessible art workshops and community-based installations led by Ann K. Chou. Learn lantern making, sumi-e brush painting, sensory storytelling, and more in Victoria & Vancouver." />
   <meta name="keywords" content="lantern workshop, shadow play, art jam, sumi-e, Chinese brush painting, puppet making, community mural, textile banners, Ann Chou, Annreflection Studio, Victoria artist, Vancouver workshops, disability art, inclusive art" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="css/style_resp.css">
 </head>
 
