Update workshops.html. icon-bar aria-label

--- a/workshops.html
+++ b/workshops.html
@@ -47,17 +47,27 @@
   </div>
 </header>
 
-<div class="icon-bar" aria-label="Social media links">
-    <!-- ... other social icons ... -->
-    <a href="https://www.instagram.com/annreflection/" class="instagram"><i class="fa fa-instagram"></i></a>
-    <a href="https://www.facebook.com/AnnReflectionArts/" class="facebook"><i class="fa fa-facebook"></i></a>
-    <a href="https://linkedin.com/in/annkchou" class="linkedin"><i class="fa fa-linkedin"></i></a>
-    <a href="http://www.youtube.com/@annchou9171" class="youtube"><i class="fa fa-youtube"></i></a>
-    <a href="https://www.flickr.com/photos/annchou/" class="twitter"><i class="fa fa-flickr"></i></a>
-    <a href="https://annreflection.substack.com" class="substack"><i class="fa fa-stack-exchange"></i></a>
+<div class="icon-bar" role="navigation" aria-label="Social media and accessibility links">
+  <a href="https://www.instagram.com/annreflection/" class="instagram" aria-label="Follow Ann K. Chou on Instagram">
+    <i class="fa fa-instagram" aria-hidden="true"></i>
+  </a>
+  <a href="https://www.facebook.com/AnnReflectionArts/" class="facebook" aria-label="Follow Ann K. Chou on Facebook">
+    <i class="fa fa-facebook" aria-hidden="true"></i>
+  </a>
+  <a href="https://linkedin.com/in/annkchou" class="linkedin" aria-label="Connect with Ann K. Chou on LinkedIn">
+    <i class="fa fa-linkedin" aria-hidden="true"></i>
+  </a>
+  <a href="http://www.youtube.com/@annchou9171" class="youtube" aria-label="Subscribe to Ann K. Chou's YouTube channel">
+    <i class="fa fa-youtube" aria-hidden="true"></i>
+  </a>
+  <a href="https://www.flickr.com/photos/annchou/" class="flickr" aria-label="View Ann K. Chou's photography on Flickr">
+    <i class="fa fa-flickr" aria-hidden="true"></i>
+  </a>
+  <a href="https://annreflection.substack.com" class="substack" aria-label="Subscribe to Ann K. Chou's Substack newsletter">
+    <i class="fa fa-stack-exchange" aria-hidden="true"></i>
+  </a>
 
-    <!-- ✅ Optional second toggle at the bottom -->
-    <button id="darkModeToggleIconBar" aria-label="Toggle dark mode" title="Toggle dark mode">🌙</button>
+  <button id="darkModeToggleIconBar" class="button-ghost" aria-label="Switch between dark and light mode" title="Toggle dark mode">🌙</button>
 </div>
 
 <!-- ✅ HERO SECTION -->
