--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
   gtag('config', 'G-JHX8G8JN6Y');
 </script>
   
-<body class="dark-mode">
+<body>
+  <script>
+    (function() {
+      const savedTheme = localStorage.getItem('darkMode');
+      // If user has a preference, use it. Otherwise, default to 'dark'
+      if (savedTheme === 'enabled' || (!savedTheme && true)) { 
+        document.body.classList.add('dark-mode');
+      }
+    })();
+  </script>
   <header>
     <div class="topnav" id="myTopnav">
       <a href="#home" class="logo">
@@ -628,6 +637,7 @@
 </body>
 
 </html>
+
 
 
 
