Update workshops.html default to light

--- a/workshops.html
+++ b/workshops.html
@@ -20,6 +20,15 @@
 </script>
   
 <body>
+  <script>
+    (function() {
+      const savedTheme = localStorage.getItem('darkMode');
+      // If user has a preference, use it. Otherwise, default to 'light'
+      if (savedTheme === 'enabled') { 
+        document.body.classList.add('dark-mode');
+      }
+    })();
+  </script>
 
 <header>
   <div class="topnav" id="myTopnav">
