--- a/workshops.html
+++ b/workshops.html
@@ -143,8 +143,9 @@
   </section>
 
   <section id="technical" class="project-banner-note">
-    <h3>🛠️ Technical Foundations: The 5 Essential Joints</h3>
-    <p>Teaching the structural engineering of light using upcycled materials.</p>
+    <h3>🛠️ Technical Foundations: The 5 Essential Joints for making lanterns with bamboos and bracnches</h3>
+    <img src="rss-wor/5-kind-of-joints.png" alt="The 5 Essential Joints for making lanterns with bamboos and bracnchesy">
+    <p>Teaching the structural engineering of lantern making using bamboo strips, garden waste and upcycled materials.</p>
     
     <p>Intergenerational training includes: Flat, Cross, Hook, T, and Corner joints.</p>
   </section>
