--- a/workshops.html
+++ b/workshops.html
@@ -205,6 +205,17 @@
         </div>
       </div>
 
+      <div class="card-text">
+          <h3>Grade School Upcycling: Lantern Making</h3>
+          <p>A condensed 1-hour workshop designed for young learners. Students explore sustainable art through a "dry technique" construction using upcycled vegetable mesh.</p>
+          <ul class="project-meta">
+            <li><strong>Duration:</strong> 1 Hour</li>
+            <li><strong>Focus:</strong> Single-structure construction</li>
+            <li><strong>Medium:</strong> Reclaimed mesh & dry assembly</li>
+          </ul>
+        </div>
+      </div>
+
     </div>
   </section>
 </main>
