--- a/workshops.html
+++ b/workshops.html
@@ -179,29 +179,35 @@
         </div>
       </div>
 
-      <div class="project project-card">
-        <div class="gallery-item-slider">
-          <div class="slider-wrapper">
-            <img src="rss-wor/sumi-e-promo.png" alt="Sumi-e promo">
-            <img src="rss-wor/sumi-e-sniwwoc.jpg" alt="Sumi-e session with SNIWWOC">
-          </div>
-        </div>
-        <div class="card-text">
-          <h3>Asian Heritage: Meditative Ink</h3>
-          <p>Lightweight Chinese brush painting setups for minimal venue impact.</p>
+    <div class="project project-card">
+      <div class="gallery-item-slider">
+        <div class="slider-wrapper">
+          <img src="rss-wor/sumi-e-promo.png" alt="Meditative Ink Workshop Promo">
+          <img src="rss-wor/sumi-e-sniwwoc.jpg" alt="Sumi-e session with SNIWWOC">
         </div>
       </div>
+      <div class="card-text">
+        <h3>Asian Heritage: Meditative Ink</h3>
+        <p><strong>A 3-hour immersive workshop in Chinese brush painting, designed for portability and community engagement.</strong></p>
+        
+        <p>Participants explore foundational strokes using bamboo brushes, focusing on 3-level ink dilution and "dry brush" techniques for botanical textures. To ensure a successful experience for all skill levels, I utilize under-paper templates that guide participants in creating presentable final pieces while focusing on the meditative flow of the ink.</p>
+        
+        <p class="partners"><em>Presented in partnership with <strong>Alter Arts Society</strong> and the <strong>Support Network for Indigenous Women & Women of Colour (SNIWWOC)</strong>.</em></p>
+      </div>
+    </div>
 
       <div class="project project-card">
         <div class="gallery-item-slider">
           <div class="slider-wrapper">
-            <img src="rss-wor/shoe-box-promo.jpeg" alt="Shoebox stage promo">
-            <img src="rss-wor/shoe-box-stage-bccd-1.png" alt="Shoebox stage creation">
+            <img src="rss-wor/shoe-box-promo.jpeg" alt="Multi-sensory Shoebox Stage Promo">
+            <img src="rss-wor/shoe-box-stage-bccd-1.png" alt="Shoebox stage creation process">
           </div>
         </div>
         <div class="card-text">
-          <h3>Shoebox Stages</h3>
-          <p>Alternative-way personal storytelling kits for inclusive, non-verbal narrative play.</p>
+          <h3>Multi-sensory Shoebox Stages</h3>
+          <p><strong>Inclusive, non-verbal storytelling kits for personal narrative play.</strong></p>
+          <p>Participants create modular, changeable scenes using a "material mart" of transparent colors, natural objects, and varied textures. Designed to be portable, these stages allow creators to carry their personal stories with them.</p>
+          <p><em>Developed for the BC Culture Days A/I/R series, specifically tailored for disability arts and accessibility.</em></p>
         </div>
       </div>
 
