--- a/workshops.html
+++ b/workshops.html
@@ -211,6 +211,12 @@
         </div>
       </div>
 
+      <div class="project project-card">
+        <div class="gallery-item-slider">
+          <div class="slider-wrapper">
+            <img src="rss-wor/lantern-upcycling-bccd-school.png" alt="Grade School Upcycling: Lantern Making">
+          </div>
+        </div>
       <div class="card-text">
           <h3>Grade School Upcycling: Lantern Making</h3>
           <p>A condensed 1-hour workshop designed for young learners. Students explore sustainable art through a "dry technique" construction using upcycled vegetable mesh.</p>
