--- a/workshops.html
+++ b/workshops.html
@@ -134,7 +134,7 @@
 
       <div class="project project-card">
         <div class="gallery-item">
-          <img src="rss-wor/AnnKChou-removeCastingLantern.jpg" alt="Painting fabric art" class="catalog-thumb" style="width:100%; height:280px; object-fit:cover;">
+          <img src="rss/AC3_SpoonDance_DayVinesArt2023_ShadowDance.png" alt="Painting fabric art" class="catalog-thumb" style="width:100%; height:280px; object-fit:cover;">
         </div>
         <h3>Textile Banners & Curtains</h3>
         <p>Vivid large-scale banners painted with acrylic-based fabric paints. Custom designs celebrate community identity and can serve as functional curtains or partitions.</p>
