Update workshops.html technical foundation

--- a/workshops.html
+++ b/workshops.html
@@ -142,13 +142,42 @@
     </div>
   </section>
 
-  <section id="technical" class="project-banner-note">
-    <h3>🛠️ Technical Foundations: The 5 Essential Joints for making lanterns with bamboos and bracnches</h3>
-    <img src="rss-wor/5-kind-of-joints.png" alt="The 5 Essential Joints for making lanterns with bamboos and bracnchesy">
-    <p>Teaching the structural engineering of lantern making using bamboo strips, garden waste and upcycled materials.</p>
-    
-    <p>Intergenerational training includes: Flat, Cross, Hook, T, and Corner joints.</p>
-  </section>
+<section id="technical-foundations" class="project-grid">
+
+  <div class="project project-card technical-card">
+    <div class="gallery-item-slider">
+      <img src="rss-wor/5-kind-of-joints.png" alt="5 Essential Joints for Lantern Construction">
+    </div>
+    <div class="card-text">
+      <h3>I. Structural Engineering</h3>
+      <p><strong>The 5 Essential Joints:</strong> Mastery of bamboo and branch joinery (Flat, Cross, Hook, T, and Corner).</p>
+      <p>Focuses on tension, structural integrity, and the physics of upcycled organic materials.</p>
+    </div>
+  </div>
+
+  <div class="project project-card technical-card">
+    <div class="gallery-item-slider">
+      <img src="rss-wor/sumi-e-ink-loading.png" alt="3-Level Ink Dilution Technique">
+    </div>
+    <div class="card-text">
+      <h3>II. Material Science</h3>
+      <p><strong>3-Level Ink Loading:</strong> Traditional Sumi-e technique using controlled dilution levels (Light, Medium, Dark).</p>
+      <p>Utilizes capillary action and brush pressure to create botanical textures and tonal depth in a single stroke.</p>
+    </div>
+  </div>
+
+  <div class="project project-card technical-card">
+    <div class="gallery-item-slider">
+      <img src="rss-wor/shadow-light-physics.png" alt="Dynamic Shadow Animation through Light Source Manipulation">
+    </div>
+    <div class="card-text">
+      <h3>III. Optical Physics</h3>
+      <p><strong>Kinetic Shadow Animation:</strong> Manipulating the focal point and distance of the light source rather than the puppet.</p>
+      <p>By changing the light's angle and proximity, the shadow undergoes "optical scaling" and transformation, creating a cinematic sense of movement and depth.</p>
+    </div>
+  </div>
+
+</section>
 
   <section id="funder-info" class="substack-box">
     <h3>💡 Collaborator & Funder Insights</h3>
