--- a/workshops.html
+++ b/workshops.html
@@ -177,6 +177,23 @@
     </div>
   </div>
 
+  <div class="project project-card technical-card">
+  <div class="gallery-item-slider">
+    <div class="slider-wrapper">
+      <img src="rss-wor/casting-process-bird.png" alt="Form-based lantern casting technique">
+    </div>
+  </div>
+  <div class="card-text">
+    <h3>IV. Form-Based Shell Casting</h3>
+    <p><strong>Complex Volume Construction:</strong> A precise casting method using real-life objects or custom-sculpted forms as a "master mold."</p>
+    <ul>
+      <li><strong>Protective Interface:</strong> A primary plastic wrap layer ensures object protection and friction-less removal.</li>
+      <li><strong>Structural Skin:</strong> Application of high-strength rice paper or triple-layered tissue to create a lightweight, rigid shell.</li>
+      <li><strong>Surgical Mending:</strong> Controlled incision to extract the internal form, followed by structural re-sealing to maintain the object's integrity.</li>
+    </ul>
+  </div>
+</div>
+
 </section>
 
   <section id="funder-info" class="substack-box">
